--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-navigation": "^4.4.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
